--- a/index.css
+++ b/index.css
@@ -205,17 +205,17 @@ img {
 }
 
 .intro {
-  width: 500px;
-  height: 100px;
-  padding: 0px;
-
   position: absolute;
-  top: 50%;
-  left: 50%;
-
-  margin: -70px 0 0 -170px;
+  top: 40%;
+  left: 0;
+  right: 0;
+  margin: auto;
+  
+  text-align: center;
+  color: #fff;
 }
 
 .intro h3 {
-  font-size: 24px;
+  font-size: 50px;
+
 }
