--- a/index.css
+++ b/index.css
@@ -82,7 +82,6 @@ body {
 }
 
 .menu li  {
-
   color: white;
   font-size: 24px;
   display: inline-block;
@@ -103,7 +102,6 @@ a.chapter-anchor {
   position: relative;
   top: 150px;
 }
-
 
 .header {
   position: fixed;
@@ -183,18 +181,32 @@ img {
 
 /* Media Queries for different size screens*/
 @media screen and (max-width: 900px) {
+  
+
+ .content p {
+  font-size: 24px;
+  }
+
  .container {
     padding-top: calc(1.5em + 3em + 3 * 1.5 * 36px);
  }
 }
 
 @media screen and (max-width: 600px) {
+  .content p {
+  font-size: 26px;
+  }
+
  .container {
     padding-top: calc(1.5em + 3em + 3 * 1.5 * 36px);
  }
 }
 
 @media screen and (max-width: 500px) {
+  .content p {
+  font-size: 20px;
+  }
+
  .container {
     padding-top: calc(1.5em + 3em + 4 * 1.5 * 36px);
  }
@@ -217,5 +229,8 @@ img {
 
 .intro h3 {
   font-size: 50px;
+}
 
+#go {
+  display: none;
 }
