--- a/index.css
+++ b/index.css
@@ -31,31 +31,24 @@ have to change the .header definition in the index.css
   box-sizing: border-box;
 }
 
+a, a:visited {
+  color: inherit;
+  text-decoration: none;
+  text-decoration-color: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
 body {
   width: 100%;
   font-family: 'druk';
+  background-color: #000; 
 }
 
 .wrapper {
   width: 100%;
-  
-  /*opacity: 0.5;*/
-
-  background-color: #000;  
-
-}
-
-.wrapper::after {
-  content: "";
-  /*background-image: url(images/czadzikczarny.jpg);*/
-  background-size: 100%;
-  opacity: 0.0;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  position: absolute;
-  z-index: -1;
 }
 
 .container {
@@ -70,24 +63,74 @@ body {
   background-color: #fff;
 }
 
-.chapter {
-  margin-bottom: 10em;
-
+.intro {
+  position: absolute;
+  top: 40%;
+  left: 0;
+  right: 0;
+  margin: auto;
+  
+  text-align: center;
+  color: #fff;
 }
 
+.invisible {
+  display:none;
+}
 
-.title {
+.intro h3 {
+  font-size: 50px;
+}
+
+#go {
+  display: none;
+}
+
+.menu {
+  display: flex;
+  justify-content: space-between;
+}
+
+.menu li  {
+  color: white;
+  font-size: 14px;
+  display: inline-block;
+}
+
+.chapter {
+  margin-bottom: 2em;
+}
+
+a.chapter-anchor {
+    display: block;
+    position: relative;
+    top: -150px;
+    /*visibility: hidden;*/
+}
+
+.chapter-anchor h2  {
+  position: relative;
+  top: 150px;
+}
+
+.header {
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
-  padding: 1.5em 2em 3em 2em;
+  padding: 1.5em 2em 0em 2em;
   /*opacity: 0.5;*/
   margin: auto;
   max-width: 900px;
   text-align: center;
   color: #fff;
   background-color: black;
+  z-index: 9999;
+  overflow-y: none;
+}
+
+.big-title {
+  font-size: 36px;
 }
 
 h1 {
@@ -97,14 +140,12 @@ h1 {
   letter-spacing: 1.5px;
 /*    top: 20px;
   left: 270px;*/
-  font-size: 25px;
+  font-size: 24px;
 }
 
 h2 {
-  font-size: 30px;
-  padding-top: 2em;
-  margin-bottom: 2em;
-
+  font-size: 42px;
+  margin-bottom: 1.5em;
 }
 
 img {
@@ -142,39 +183,62 @@ img {
 }
 
 
+.chapter7 p  {
+  text-indent: 0;
+}
+
+
 
 /* Media Queries for different size screens*/
-/*@media screen and (max-width: 900px) {
+@media screen and (max-width: 900px) {
+  .big-title {
+    font-size: 3.8vw;
+  }
+  h1 {
+    font-size: 2.65vw;
+  }
+
+ .content p {
+  font-size: 24px;
+  }
+
  .container {
-  position: relative;
-  left: 2em;
-  right: 1em;
+    padding-top: calc(1.5em + 3em + 3 * 1.5 * 36px);
  }
-}*/
+}
 
 @media screen and (max-width: 600px) {
- .container {
-    padding-top: calc(1.5em + 3em + 4 * 1.5 * 30px);
+  .big-title {
+    font-size: 3.5vw;
+  }
+  h1 {
+    font-size: 2.5vw;
+  }
 
+  .content p {
+  font-size: 22px;
+  }
+
+ .container {
+    padding-top: calc(1.5em + 3em + 3 * 1.5 * 36px);
  }
 }
 
-.invisible {
-  display:none;
+@media screen and (max-width: 500px) {
+   .big-title {
+    font-size: 3vw;
+  }
+
+    .subtitle {
+      display: none;
+    }
+
+  .content p {
+  font-size: 20px;
+  }
+
+ .container {
+    padding-top: 5em;
+ }
 }
 
-.intro {
-  width: 500px;
-  height: 100px;
-  padding: 0px;
-
-  position: absolute;
-  top: 50%;
-  left: 50%;
-
-  margin: -70px 0 0 -170px;
-}
-
-.intro h3 {
-  font-size: 24px;
-}
